2011-03-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (equals): Test here for token index in range, rather than
	trusting all callers to get it right.

	* src/command.c src/parse.c: Token index range test is now redundant.

2011-03-20  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/winmain.c (WinExit): Explicitly close help window on exit.
	Fixes hangs of gnuplot when it is closed via the Windows taskbar 
	and help window	and graph window open.

	* src/win/wmenu.c (LoadMacros), src/win/wgnuplot.mnu ([Button]): Add
	icons to the text-window toolbar.

	* docs/windows/doc2html.c (process_line): Don't include '=' items in
	index. This avoids duplicate entries which caused wgnuplot to stall 
	when an e.g. 'set term png; help "png"' was issued.

2011-03-18  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wtext.c (TextCopyClip): Fix copying of last line of a
	marked region in case the marking exceeds the length of that
	line.

	* src/win/wgnuplib.rc, src/win/resourc.h: Remove dialog resource
	which was only used on Win16.

	* term/gd.trm (PNG_init): On Windows, set GDFONTPATH to %windir%\Fonts
	if not set previously.

	* src/plot.c (main), src/win/winmain.c (WinMain, WinExt): Always use 
	the ANSI codepage (instead of OEM) to ensure sure that the console 
	of gnuplot.exe and the graph window use the same codepage. Warn 
	users that raster fonts won't display all characters correctly and
	restore the codepage on exit.

2011-03-17  Ethan A Merritt  <merritt@u.washington.edu>

	* axis.c(gen_tics): Make sure the axis tic label format string is
	long enough to hold enhanced text markup.  Fixes buffer overflow.

2011-03-16  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (UnicodeText): new function to convert a string 
	to UTF-16

	* src/win/wgraph.c (drawgraph, GraphGetTextLength) NEWS: support 
	"set encoding" for all currently defined encodings

	* src/win/wtext.c (ReadTextIni): select default font according to